--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -52,12 +52,12 @@
                     <div class="details-container">
                         <question-header [question]="question"></question-header>
                         <div class="article-details">
-                            <user-info [userObj]="question.lastAnswer?.userViewModel" [viewDate]="question.lastAnswer?.answerDate"></user-info>
-                            <div class="answer-text" [innerHTML]="question.lastAnswer?.text?.substring(0,200)"></div>
+                            <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate"></user-info>
+                            <div class="answer-text" [innerHTML]="question.bestAnswer?.text?.substring(0,200)"></div>
                             <div *ngIf="question.answers[question.answers.length-1]"> by {{question.answers[question.answers.length-1]?.userViewModel?.name}} {{question.answers[question.answers.length-1]?.createdOn | date: 'dd MMM, yyyy'}}</div>
                             <hr />
-                            <ap-status [questionObj]="question"> </ap-status>
-                            <ap-comment [questionId]="question.id"></ap-comment>
+                            <ap-status [questionObj]="question" [answerObj]="question.bestAnswer"> </ap-status>
+                            <ap-comment  [questionId]="question?.id" [answerId]="question.bestAnswer?.id"></ap-comment>
                         </div>
                     </div>
                 </div>
