Top5 user, Top 5 question issue fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
@@ -1,4 +1,4 @@
-﻿<div class="collapse comment-panel" id="questionComment{{questionId}}">
+﻿<div class="collapse comment-panel" id="questionComment{{commentId}}">
     <form #commentForm="ngForm" class="form-horizontal " role="form">
         <div class="comment-input">
             <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
