--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
@@ -19,6 +19,9 @@ ul {
 .menu-container>ul>li>a{
     color:#b3abab;
 }
+.menu-container>ul>li>a:hover{
+    color:#858080;
+}
 .question-list > a {
     display: block;
 }
