--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -17,8 +17,11 @@
                             <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate"></user-info>
                             <div *ngIf="question.bestAnswer?.text"><p [innerHTML]="question.bestAnswer?.text"></p><span><a [routerLink]="['/question/detail',question.id]">Read more..</a></span></div>
                             <hr />
-                            <ap-status [questionObj]="question" [answerObj]="question.bestAnswer"> </ap-status>                            
-                            <ap-comment [questionId]="question.id"  [answerId]="question.bestAnswer?.id"></ap-comment>
+                            <div *ngIf="question.bestAnswer">
+                                <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question.bestAnswer"> </ap-status>
+                                <ap-comment [isQuestion]='false' [questionId]="question.id" [answerId]="question.bestAnswer?.id"></ap-comment>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
