--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -63,8 +63,8 @@
             <div class="header-info">{{question.userViewModel?.name}}, {{question.userViewModel?.occupation}} {{question?.createdOn | date: 'dd MMM, yyyy'}} </div>
             <!--<div class="header-info">{{date.getMonthName(question.date?.getMonth())}} {{question.date?.getFullYear()}}</div>-->
             <p class="answer-text" [innerHTML]="question.body"></p>
-            <ap-status [questionObj]="question"> </ap-status>
-            <ap-comment [questionId]="question?.id"></ap-comment>
+            <ap-status [isQuestion]='true' [questionObj]="question"> </ap-status>
+            <ap-comment [isQuestion]='true' [questionId]="question?.id"></ap-comment>
         </div>
     </div>
     <hr />
@@ -79,8 +79,8 @@
                 <img class="user-image" src="../../../../profile/{{question.userViewModel?.imageUrl}}" />
                 <div class="header-info">{{answer.userViewModel?.name}},{{answer.userViewModel?.occupation}} {{answer?.createdOn | date: 'dd MMM, yyyy'}}</div>
                 <p class="answer-text" [innerHTML]="answer.text"></p>
-                <ap-status [questionObj]="question" [answerObj]="answer"> </ap-status>
-                <ap-comment [questionId]="question?.id"  [answerId]="answer.id"></ap-comment>
+                <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="answer"> </ap-status>
+                <ap-comment [isQuestion]='false' [questionId]="question?.id"  [answerId]="answer.id"></ap-comment>
             </div>
         </div>
         <hr />
