--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="status-panel">
-
+     
     <img *ngIf="questionObj?.answers[0]?.likes?.length<1"  src='../images/fade-logo.png'  onmouseover="this.src = '../images/like-logo.png';" onmouseout="this.src = '../images/fade-logo.png';" />
     <img *ngIf="questionObj?.answers[0]?.likes?.length>0" src='../images/like-logo.png' />
     <a href="#" data-toggle="modal" data-target="#myModal" class="number-box" (click)="showLikeUserDetails(answerObj?.id,questionObj.id)"> {{questionObj?.answers[0]?.likes?.length}}</a>
@@ -10,7 +10,7 @@
     <div class="number-box" >
         {{questionObj.answers[0]?.comments?.length}} 
     </div>
-    <a class="status-line" data-toggle="collapse" aria-expanded="false" attr.data-target="#questionComment{{questionObj.id}}">Comentarios</a>
+    <a class="status-line" data-toggle="collapse" aria-expanded="false" attr.data-target="#questionComment{{commentId}}">Comentarios</a>
     <div class="status-line number-box">{{questionObj?.answers?.length}}</div>
     <div class="status-line">Respuestas</div>
 
