Comment drop down fixed and comment count fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -8,7 +8,7 @@
     <div class="status-line number-box">{{questionObj?.viewCount?questionObj?.viewCount:0}}</div>
     <div class="status-line">Leidos</div>
     <div class="number-box" >
-        {{questionObj.answers[0]?.comments?.length}} 
+        {{CommentCount}} 
     </div>
     <a class="status-line" data-toggle="collapse" aria-expanded="false" attr.data-target="#questionComment{{commentId}}">Comentarios</a>
     <div class="status-line number-box">{{questionObj?.answers?.length}}</div>
