sksdh:Stus componetn missing forom my computer

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -12,7 +12,7 @@
         {{CommentCount}} 
     </div>
     <a class="status-line" data-toggle="collapse" aria-expanded="false" attr.data-target="#questionComment{{commentId}}">Comentarios</a>
-    <div class="status-line number-box">{{questionObj?.answers?.length}}</div>
+    <div class="status-line number-box">{{questionObj?.answerCount}}</div>
     <div class="status-line">Respuestas</div>
 
     <!--==========Right Side=====-->
