akash:question like bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -3,7 +3,7 @@
     <img *ngIf="questionObj?.answers[0]?.likes?.length<1"  src='../images/fade-logo.png'  onmouseover="this.src = '../images/like-logo.png';" onmouseout="this.src = '../images/fade-logo.png';" />
     <img *ngIf="questionObj?.answers[0]?.likes?.length>0" src='../images/like-logo.png' />
     <a href="#" data-toggle="modal" attr.data-target="#likeModal{{commentId}}" class="number-box" (click)="showLikeUserDetails()" > {{isQuestion?(questionObj.likes.length):(answerObj?.likes?.length)}}</a>
-    <a (click)="submitLike(answerObj.id,questionObj.id)"><div class="status-line">Like</div></a>
+    <a (click)="submitLike(answerObj?.id,questionObj.id)"><div class="status-line">Like</div></a>
     <div class="status-line like-border "></div>
     <div class="status-line number-box">{{questionObj?.viewCount?questionObj?.viewCount:0}}</div>
     <div class="status-line">Leidos</div>
