--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/question-panel.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/question-panel.less
@@ -5,14 +5,13 @@
     margin-bottom: 0;
     padding-bottom: 15px;
     border-top: 1px solid #eeeeee;
-    border-bottom: 1px solid #eeeeee;
 }
 
 .questions-container:hover {
     background-color: #f5f5f5;
     cursor: pointer;
 }
-.panel-article {
+/*.panel-article {
     margin-top: 20px;
     margin-bottom: 20px;
-}
+}*/
