--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -9,15 +9,19 @@
     <script src="~/js/main.js"></script>
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
+    
 
     <script src="~/libs/core-js/client/shim.min.js"></script>
     <script src="~/libs/zone.js/dist/zone.js"></script>
     <script src="~/libs/reflect-metadata/Reflect.js"></script>
     <script src="~/libs/systemjs/dist/system.src.js"></script>
     <script src="https://cdn.ckeditor.com/4.6.1/standard-all/ckeditor.js"></script>
-
     <!-- 2. Configure SystemJS -->
     <script src="~/js/systemjs.config.js"></script>
+
+    @*======Toaster========*@
+    <script src="~/libs/ng2-toastr/bundles/ng2-toastr.js"></script>
+    <link href="~/libs/ng2-toastr/bundles/ng2-toastr.min.css" rel="stylesheet" />
     <script>
         System.import('../js/main').catch(function (err) {
             console.error(err);
