--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
@@ -27,8 +27,7 @@ span {
     width: 100%;
     float: left;
     overflow: hidden; /* used for carousel*/
-    /*margin-left: 15px;
-    margin-right: 15px;*/
+    margin-bottom: 10px;
 }
 
 
