--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/education.component.html
@@ -1,10 +1,4 @@
-﻿<style>
-    .mid-label {
-        float: left;
-        margin-top:10px;
-    }
-</style>
-<form>
+﻿<form>
     <div class="info-form">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -17,7 +11,6 @@
                         <label>INSTITUTE/UNIVERSITY*</label>
                         <input [(ngModel)]="education.institute" name="institute" type="text" class="form-control profile-form">
                     </div>
-                    <!-- =============== -->
                     <div class="form-group col-md-6">
                         <label>TIME FRAME*</label>
                         <div class="row">
