--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -7,8 +7,6 @@
     <title>iHaz tu preguntas sobre negocios!</title>
 
     <script src="~/js/main.js"></script>
-    <!-- 1. Load libraries -->
-    <!-- Polyfill(s) for older browsers -->
 
     <script src="~/libs/core-js/client/shim.min.js"></script>
     <script src="~/libs/zone.js/dist/zone.js"></script>
@@ -105,6 +103,15 @@
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="node_modules/systemjs/dist/system.src.js"></script>
+        <script src="systemjs.config.js"></script>
+        <!-- endbuild -->
+        <!-- build:app -->
+        <script>
+      System.import('app/vendor').then(function() {
+          System.import('app').catch(function(err){ console.error(err); });
+      });
+        </script>
     </environment>
 
     @RenderSection("scripts", required: false)
