--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/related-question-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/related-question-left-menu.component.html
@@ -1,9 +1,9 @@
 ﻿<div class="menu-container">
     <div class="row">
         <div>
-            <div class="question-title"><h3>Related Questions</h3></div>
+            <div class="list-title"><h3>Related Questions</h3></div>
             <img src="../../../../images/border-horizontal.png" />
-            <ul class="question-list">
+            <ul class="left-panel-list">
                 <li *ngFor="let question of questions"><a [routerLink]="['/question/detail',question.id]"> {{question.title}}</a></li>
             </ul>
         </div>
