Home page: spacing fixed for  left panel, tab panel css moved to style page.

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -21,6 +21,8 @@
 @import "site/userinfo";
 @import "site/color-scheme";
 @import "site/alta-sites";
+/*Components Less*/
+@import "site/components/tab-panel.component.less";
 .right-border{
     border-right:1px solid;
     color:white;
