--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <div class="tab-panel-container">
+    <div class="tab-panel-container center-width">
         <div class="tab-header-col-md-1 left-arrow"> <a class="arrow-sign" (click)="rightclick()"><span class="icon-arrow-left"></span></a></div>
         <div class="tab-header-col-md-10">
             <div class="tabs-container" >
