--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-topic.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-topic.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="menu-container">
-    <div class="list-title"><h4>Top Topics</h4></div>
+    <div class="list-title"><h4>Temáticas más destacadas</h4></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="left-panel-list" *ngIf="topFiveTopics.length>0">
         <li *ngFor="let topFiveTopic of topFiveTopics">
