akash:top topics added to question body and homepage

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -4,6 +4,7 @@
         <div id="leftPanel">
             <topfive-question-left-menu > </topfive-question-left-menu>
             <topfive-user></topfive-user>
+            <topfive-topic></topfive-topic>
             <category-left-menu [caegoryId]="id"></category-left-menu>
         </div>
     </div>
