--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-topic.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-topic.component.html
@@ -3,7 +3,7 @@
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="left-panel-list" *ngIf="topFiveTopics.length>0">
         <li *ngFor="let topFiveTopic of topFiveTopics">
-            <a [routerLink]="['/question/detail',topFiveTopic.id]"> {{topFiveTopic?.topicName}}</a>
+            <a [routerLink]="['/question/home/topic',{topicId:topFiveTopic.id,categoryId:topFiveTopic.categoryId}]"> {{topFiveTopic?.topicName}}</a>
         </li>
     </ul>
 </div>
