--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,29 +1,23 @@
-﻿<style>
-    .modal-dialog {
-    margin: 20% auto;
-}
-</style>
-<div class="row">
+﻿<div class="row">
     <div class="left-panel">
         <div>.</div>
         <div id="leftPanel">
             <topfive-question-left-menu> </topfive-question-left-menu>
             <topfive-user></topfive-user>
-            <category-left-menu [caegoryId]="id"></category-left-menu>
             <topfive-topic></topfive-topic>
+            <category-left-menu [caegoryId]="id"></category-left-menu>
         </div>
     </div>
     <div class="center-width">
         <div class="tab" *ngFor="let question of questions">
             <div class="panel-article">
                 <div class="questions-container">
-                    <div data-toggle="modal" data-target="#question" (click)="ShowModal(question.id)"   class="details-container">
+                    <div data-toggle="modal" data-target="#question" (click)="ShowModal(question.id)" class="details-container">
                         <question-header [question]="question"></question-header>
                         <div class="article-details">
                             <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate"></user-info>
                             <div *ngIf="question.bestAnswer?.text">
                                 <p [innerHTML]="question.bestAnswer?.text"></p><span><a [routerLink]="['/question/detail',question.id]">Read more..</a></span>
-                                <hr />
                             </div>
                             <div *ngIf="question.bestAnswer">
                                 <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question.bestAnswer"> </ap-status>
