--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/category-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/category-left-menu.component.html
@@ -1,5 +1,5 @@
 ﻿<div id="category" class="menu-container">
-    <div class="list-title"><h4>Categories</h4></div>
+    <div class="list-title"><h4>Categorías</h4></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="left-panel-list">
         <li *ngFor="let category of categories"><a [routerLink]="['/question/home',category.id]"> {{category?.name}}</a></li>
