--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-header/question-header.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-header/question-header.component.html
@@ -4,6 +4,4 @@
     <li class="question-info" *ngIf="question.questionLevelNames.length!=0">{{question?.questionLevelNames[0]}}</li>
     <li class="question-info">{{question?.createdOn | date: 'MMM, yyyy'}}</li>
 </ul>
-<h3 class="question-title">
-    <a [routerLink]="['/question/detail',question.id]">{{question.title}}</a>
-</h3>
+<div class="clearfix"></div>
