--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="left-panel">
     <related-question-left-menu></related-question-left-menu>
-    <related-topic></related-topic>
+    <related-topic [topicId]="question?.questionTopics[0]?.topicId"></related-topic>
 </div>
 
 <!-- =========Question========== -->
