akash:category left menu added to question details

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -1,6 +1,7 @@
 ﻿<div class="left-panel">
     <related-question-left-menu></related-question-left-menu>
     <related-topic [topicId]="question?.questionTopics[0]?.topicId"></related-topic>
+    <category-left-menu [caegoryId]="question?.categories[0]?.id"></category-left-menu>
 </div>
 
 <!-- =========Question========== -->
