--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,6 +1,7 @@
 ﻿    <div class="left-panel">
         <div>.</div>
         <div id="leftPanel">
+            <level></level>
             <topfive-question-left-menu > </topfive-question-left-menu>
             <topfive-user></topfive-user>
             <topfive-topic></topfive-topic>
